--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,9 +1,11 @@
 gamedatadir = $(pkgdatadir)/data
 
-nobase_dist_gamedata_DATA = images/fail-0.png \
-	images/interface.png \
+nobase_dist_gamedata_DATA = images/interface.png \
 	images/row1.png \
 	images/row2.png \
 	images/row3.png \
-	images/row4.png
+	images/row4.png \
+	images/puffleo1.png \
+	images/puffleo2.png \
+	images/puffleo3.png
 
